--- a/src/app/panel-wrapper/panel-wrapper.component.scss
+++ b/src/app/panel-wrapper/panel-wrapper.component.scss
@@ -4,14 +4,15 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
+  height: 100%;
 }
 
 .side-panel {
-  min-height: 400px;
   flex-grow: 1;
   margin-right: 10px;
   min-width: 225px !important;
   max-width: 225px !important;
+  height: 100%;
 }
 
 .main-panel {
