--- a/src/app/wrapper/wrapper.component.scss
+++ b/src/app/wrapper/wrapper.component.scss
@@ -4,4 +4,13 @@
 
 ::ng-deep .mat-tab-body {
   overflow-y: hidden !important;
+  height: 100%;
+}
+
+::ng-deep .mat-tab-body-wrapper {
+  height: 100%;
+}
+
+::ng-deep .mat-tab-group {
+  height: 100%;
 }
