risolti alcuni bug

--- a/src/app/filter-main-panel/filter-main-panel.component.html
+++ b/src/app/filter-main-panel/filter-main-panel.component.html
@@ -114,6 +114,7 @@
           <mat-label>Forma</mat-label>
           <mat-select formControlName="verbform">
             <mat-option value="Fin"> Finita </mat-option>
+            <mat-option value="Part"> Participio </mat-option>
             <mat-option value="Ger"> Gerundio </mat-option>
             <mat-option value="Inf"> Infinito </mat-option>
             <mat-option> Tutti </mat-option>
@@ -138,9 +139,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Tipo di pronome</mat-label>
           <mat-select formControlName="prontype">
-            <mat-option value="Art"> Art </mat-option>
             <mat-option value="Dem"> Dimostrativo </mat-option>
-            <mat-option value="Exc"> Exc </mat-option>
             <mat-option value="Ind"> Indefinito </mat-option>
             <mat-option value="Int"> Interrogativo </mat-option>
             <mat-option value="Neg"> Negativo </mat-option>
